force-app/main/default/objects/Liability_Account__x/Liability_Account__x.object-meta.xml
<CustomObject>
    <description>Liability Accounts for cache customers.</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>LiabilityAccount</externalName>
    <label>Liability Account</label>
    <pluralLabel>Liability Accounts</pluralLabel>
</CustomObject>