force-app/main/default/objects/Liability_Account__x/fields/Account_Name_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Line_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>AIF ACCOUNT TITLE2</description>
    <externalDeveloperName>AccountNameLine2</externalDeveloperName>
    <label>Account Name - Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>