force-app/main/default/objects/Liability_Account__x/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CACHE</complianceGroup>
    <description>Name attached to the product instance on CACHE</description>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>