force-app/main/default/objects/Liability_Account__x/fields/Account_Securitisation_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Account_Securitisation_Indicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM SECURITISATION INDICATOR</description>
    <externalDeveloperName>AccountSecuritisationIndicator</externalDeveloperName>
    <label>Account Securitisation Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>