force-app/main/default/objects/Liability_Account__x/fields/Account_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Title__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Account Title</description>
    <externalDeveloperName>AccountTitle</externalDeveloperName>
    <label>Account Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>