force-app/main/default/objects/Liability_Account__x/fields/ANZSIC__c.field-meta.xml
<CustomField>
    <fullName>ANZSIC__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Occupation Code</description>
    <externalDeveloperName>ANZSIC</externalDeveloperName>
    <label>ANZSIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>