force-app/main/default/objects/Liability_Account__x/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Account balance</description>
    <externalDeveloperName>Balance</externalDeveloperName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>