force-app/main/default/objects/Liability_Account__x/fields/Banking_Code_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Banking_Code_of_Practice__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Banking Code of Practice</description>
    <externalDeveloperName>BankingCodeOfPractice</externalDeveloperName>
    <label>Banking Code of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>