force-app/main/default/objects/Liability_Account__x/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM LRIS PURPOSE CODE</description>
    <externalDeveloperName>Code</externalDeveloperName>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>