force-app/main/default/objects/Liability_Account__x/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM CREDIT RATING</description>
    <externalDeveloperName>CreditRating</externalDeveloperName>
    <label>Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>