force-app/main/default/objects/Liability_Account__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CACHE</complianceGroup>
    <description>Customer indirect lookup using External Id</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liability Accounts</relationshipLabel>
    <relationshipName>Liability_Account</relationshipName>
    <type>IndirectLookup</type>
</CustomField>