force-app/main/default/objects/Liability_Account__x/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM LRIS REV TERMINATE</description>
    <externalDeveloperName>FacilityType</externalDeveloperName>
    <label>Facility Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>