force-app/main/default/objects/Liability_Account__x/fields/Last_Opportunity_to_Reprice__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_to_Reprice__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ORION REPRICE LAST OPPORTUNITY</description>
    <externalDeveloperName>LastOpportunityToReprice</externalDeveloperName>
    <label>Last Opportunity to Reprice</label>
    <type>Date</type>
</CustomField>