force-app/main/default/objects/Liability_Account__x/fields/Limit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Limit_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM LRIS MAN REV DATE</description>
    <externalDeveloperName>LimitExpiryDate</externalDeveloperName>
    <label>Limit Expiry Date</label>
    <type>Date</type>
</CustomField>