force-app/main/default/objects/Liability_Account__x/fields/Next_Opportunity_to_Reprice__c.field-meta.xml
<CustomField>
    <fullName>Next_Opportunity_to_Reprice__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>ORION REPRICE NEXT OPPORTUNITY</description>
    <externalDeveloperName>NextOpportunityToReprice</externalDeveloperName>
    <label>Next Opportunity to Reprice</label>
    <type>Date</type>
</CustomField>