force-app/main/default/objects/Liability_Account__x/fields/Refinance_Alteration_Additional_Indicat__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Alteration_Additional_Indicat__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM LRIS REFINANCED ALTERNATE ADD</description>
    <externalDeveloperName>RefinanceAlterationAdditionalIndicator</externalDeveloperName>
    <label>Refinance Alt./Additional Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>