force-app/main/default/objects/Liability_Account__x/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Account Relationship</description>
    <externalDeveloperName>Relationship</externalDeveloperName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>