force-app/main/default/objects/Liability_Account__x/fields/RI_INC__c.field-meta.xml
<CustomField>
    <fullName>RI_INC__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM ACCOUNT INC RI INDICATOR</description>
    <externalDeveloperName>RIINC</externalDeveloperName>
    <label>RI/INC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>