force-app/main/default/objects/Liability_Account__x/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM ACCOUNT SERVICE BRANCH</description>
    <externalDeveloperName>ServiceBranch</externalDeveloperName>
    <label>Service Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>