force-app/main/default/objects/Liability_Account__x/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Short Name</description>
    <externalDeveloperName>ShortName</externalDeveloperName>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>