force-app/main/default/objects/Liability_Account__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CACHE</complianceGroup>
    <description>Account status</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>