force-app/main/default/objects/Liability_Account__x/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Sub product code</description>
    <externalDeveloperName>SubProductCode</externalDeveloperName>
    <label>Sub Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>