force-app/main/default/objects/Liability_Account__x/fields/Unavailable_Funds__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Funds__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>LAM LRIS UNAVAILABLE FUND</description>
    <externalDeveloperName>UnavailableFunds</externalDeveloperName>
    <label>Unavailable Funds ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>